--- a/jobsclient/package.json
+++ b/jobsclient/package.json
@@ -10,7 +10,8 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.12.2",
+    "@nuxtjs/auth-next": "^5.0.0-1607335658.590bfae",
+    "@nuxtjs/axios": "^5.12.3",
     "core-js": "^3.6.5",
     "nuxt": "^2.14.6"
   },
